2007-01-03  James Willcox  <james@ximian.com>

	* src/VirtualMachine.cs: make the default state 'off'.

2006-12-20  James Willcox  <james@ximian.com>

	* configure.ac: bump version to 0.2.1

	Start maintaining this file